--- a/user/themes/stack/templates/index.html.twig
+++ b/user/themes/stack/templates/index.html.twig
@@ -1,45 +1,20 @@
 {% extends 'partials/base.html.twig' %}
-{% macro loop(page) %}
-    {% for p in page.children.visible %}
-        {% set current_page = (p.active or p.activeChild) ? 'active' : '' %}
-        <li class="{{ current_page }}">
-            <a href="{{ p.url }}">
-                {% if p.header.icon %}<i class="fa fa-{{ p.header.icon }}"></i>{% endif %}
-                {{ p.menu }}
-            </a>
-            {% if p.children.visible.count > 0 %}
-                <ul>
-                    {{ _self.loop(p) }}
-                </ul>
-            {% endif %}
-        </li>
-    {% endfor %}
-{% endmacro %}
+
+{% block stylesheets %}
+  {% do assets.addCss('theme://css/index.css') %}
+{% endblock %}
+
 {% block body %}
-<ul class="navigation">
-    {% if theme_config.dropdown.enabled %}
-        {{ _self.loop(pages) }}
-    {% else %}
-        {% for page in pages.children.visible %}
-            {% set current_page = (page.active or page.activeChild) ? 'active' : '' %}
-            <li class="{{ current_page }}">
-                <a href="{{ page.url }}">
-                    {% if page.header.icon %}<i class="fa fa-{{ page.header.icon }}"></i>{% endif %}
-                    {{ page.menu }}
-                </a>
-            </li>
-        {% endfor %}
-    {% endif %}
-    {% for mitem in site.menu %}
-        <li>
-            <a href="{{ mitem.url }}">
-                {% if mitem.icon %}<i class="fa fa-{{ mitem.icon }}"></i>{% endif %}
-                {{ mitem.text }}
-            </a>
-        </li>
+<section class="container">
+  <div class="row">
+    {% for page in pages.children.visible %}
+        {% if page.active != 1 %}
+          <a href="{{ page.url }}" class="col-md-3 category">
+              {% if page.header.icon %}<i class="fa fa-{{ page.header.icon }}"></i>{% endif %}
+              {{ page.menu }}
+          </a>
+        {% endif %}
     {% endfor %}
-    {% if config.plugins.login.enabled and grav.user.username %}
-        <li><i class="fa fa-lock"></i> {% include 'partials/login-status.html.twig' %}</li>
-    {% endif %}
-</ul>
+  </div>
+</section>
 {% endblock %}
