--- a/user/themes/stack/templates/index.html.twig
+++ b/user/themes/stack/templates/index.html.twig
@@ -9,10 +9,12 @@
   <div class="row">
     {% for page in pages.children.visible %}
         {% if page.active != 1 %}
-          <a href="{{ page.url }}" class="col-md-3 category">
+        <div class="col-md-3 col-sm-4 col-xs-6">
+          <a href="{{ page.url }}" class="category">
               {% if page.header.icon %}<i class="fa fa-{{ page.header.icon }}"></i>{% endif %}
               {{ page.menu }}
           </a>
+        </div>
         {% endif %}
     {% endfor %}
   </div>
