--- a/user/themes/stack/templates/partials/base.html.twig
+++ b/user/themes/stack/templates/partials/base.html.twig
@@ -7,11 +7,12 @@
     <title>{% if header.title %}{{ header.title|e('html') }} | {% endif %}{{ site.title|e('html') }}</title>
 
     {% do assets.addCss('theme://css/stack.min.css') %}
+    {% do assets.addCss('theme://css/style.css') %}
 
     {% block stylesheets %}
 
     {% endblock %}
-    
+
     {{ assets.css() }}
 
     <!--[if lt IE 9]>
@@ -20,6 +21,19 @@
     <![endif]-->
   </head>
   <body>
+
+    <header>
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12">
+            <img src="http://placehold.it/100x100" href="#" alt="logo" class="logo">
+            <h1>Sharing-eco</h1>
+            <h2>A curated directory of resource to share your skills and make money</h2>
+          </div>
+        </div>
+      </div>
+      <hr>
+    </header>
 
     {% block body %}
     {% endblock %}
