added url link to site

--- a/user/themes/stack/templates/category.html.twig
+++ b/user/themes/stack/templates/category.html.twig
@@ -18,7 +18,7 @@
           <div class="content">
             <h2 class="title">{{ post.title }}</h2>
             <div class="description">{{ post.header.description | truncate(200) }}</div>
-            <a href="">Read more <i class="glyphicon glyphicon-chevron-right"></i></a>
+            <a href="{{post.url}}">Read more <i class="glyphicon glyphicon-chevron-right"></i></a>
           </div>
         </div>
       </div>
