--- a/user/themes/stack/css/category.css
+++ b/user/themes/stack/css/category.css
@@ -1,14 +1,9 @@
 .main-title{
-  font-size: 25px
+  font-size: 25px;
 }
 
 .item{
   margin-bottom: 15px;
-}
-
-.item .picture{
-  float: left;
-  margin-right: 15px;
 }
 
 .item .content .title{
@@ -19,13 +14,28 @@
   text-transform: uppercase;
 }
 
+.item .content .title a{
+  color: inherit;
+  text-decoration: none;
+}
+
 .item .content .description{
   color: grey;
   margin-bottom: 5px;
 }
 
-.item .content a{
+.item .content a.more{
   color: grey;
   text-decoration: none;
   font-size: 13px;
+}
+
+@media (max-width: 768px){
+  .main-title{
+    text-align: center;
+  }
+
+  .item .col-xs-12{
+    text-align: center;
+  }
 }
