--- a/user/themes/stack/css/index.css
+++ b/user/themes/stack/css/index.css
@@ -7,21 +7,21 @@
 
 
 .category {
-  background-color: #4FC1E9;
+  background-color: #8BC34A;
   display: block;
   margin-top: 10px;
   padding: 120px 20px 20px 20px;
   text-align: right;
   color: #fff;
-  -webkit-transition: background-color 200ms linear;
-  -moz-transition: background-color 200ms linear;
-  -o-transition: background-color 200ms linear;
-  -ms-transition: background-color 200ms linear;
-  transition: background-color 200ms linear;
+  -webkit-transition: background-color 500ms linear;
+  -moz-transition: background-color 500ms linear;
+  -o-transition: background-color 500ms linear;
+  -ms-transition: background-color 500ms linear;
+  transition: background-color 500ms linear;
 }
 
-.category:hover {
-  background-color: #3BAFDA;
+.category:hover, .category:active {
+  background-color: #333;
   color: #fff;
   text-decoration: none;
 }
