--- a/user/themes/stack/css/style.css
+++ b/user/themes/stack/css/style.css
@@ -28,3 +28,38 @@ h2 {
   float:left;
   margin-right: 15px;
 }
+
+.footer{
+  background-color: #333;
+  color: white;
+}
+
+.footer .upper-section{
+  padding: 20px 0;
+}
+
+.footer .title{
+  color: white;
+  text-transform: uppercase;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.footer .description{
+  margin-bottom: 10px;
+}
+
+.footer ul{
+  list-style: none;
+  padding: 0;
+}
+
+.footer a{
+  color: white;
+  text-decoration: none;
+}
+
+.footer .copyright{
+  background-color: #111;
+  padding: 10px 0;
+}
