--- a/user/themes/stack/templates/partials/base.html.twig
+++ b/user/themes/stack/templates/partials/base.html.twig
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% if header.title %}{{ header.title|e('html') }} | {% endif %}{{ site.title|e('html') }}</title>
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     {% do assets.addCss('theme://css/stack.min.css') %}
     {% do assets.addCss('theme://css/style.css') %}
 
@@ -36,6 +36,10 @@
     </header>
 
     {% block body %}
+    {% endblock %}
+
+    {% block footer %}
+        {% include 'partials/footer.html.twig' %}
     {% endblock %}
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
