--- a/user/themes/stack/templates/index.html.twig
+++ b/user/themes/stack/templates/index.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-<section class="container">
+<section class="container home">
   <div class="row">
     {% for page in pages.children.visible %}
         {% if page.active != 1 %}
