--- a/user/themes/stack/templates/partials/footer.html.twig
+++ b/user/themes/stack/templates/partials/footer.html.twig
@@ -9,7 +9,7 @@
                 <div class="title">Navigate</div>
                 <ul>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Team</a></li>
+                    <li><a href="http://appyfriends.io/team" target="_blank">Team</a></li>
                 </ul>
             </div>
             <div class="col-xs-12 col-sm-3">
