--- a/user/themes/stack/templates/category.html.twig
+++ b/user/themes/stack/templates/category.html.twig
@@ -7,7 +7,7 @@
 
 {% block body %}
 <div class="container">
-  <h1 class="main-title">Sites</h1>
+  <h1 class="main-title">{{ page.title }}</h1>
   <div class="row item">
     <div class="col-md-8">
       {% for post in collection %}
