some design updates

--- a/user/themes/stack/templates/partials/base.html.twig
+++ b/user/themes/stack/templates/partials/base.html.twig
@@ -26,8 +26,8 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12">
-            <img src="http://placehold.it/100x100" href="#" alt="logo" class="logo">
-            <h1>Sharing-eco</h1>
+            <a href="{{ base_url_absolute }}"><img src="http://placehold.it/100x100" href="#" alt="logo" class="logo"></a>
+            <h1><a href="{{ base_url_absolute }}">Sharing-eco</a></h1>
             <h2>A curated directory of resource to share your skills and make money</h2>
           </div>
         </div>
