--- a/user/themes/stack/css/style.css
+++ b/user/themes/stack/css/style.css
@@ -59,7 +59,25 @@ h2 {
   text-decoration: none;
 }
 
+.footer a:hover, .footer a:active {
+  color: #8BC34A;
+  text-decoration: none;
+}
+
 .footer .copyright{
   background-color: #111;
   padding: 10px 0;
+}
+
+a {
+  color: #8BC34A;
+  -webkit-transition: color 100ms linear;
+  -moz-transition: color 100ms linear;
+  -o-transition: color 100ms linear;
+  -ms-transition: color 100ms linear;
+  transition: color 100ms linear;
+}
+
+a:hover, a:active {
+  color: #333;
 }
