--- a/user/themes/stack/templates/site.html.twig
+++ b/user/themes/stack/templates/site.html.twig
@@ -17,7 +17,7 @@
       <div class="col-sm-6">
         <h3>{{ page.title }}</h3>
         <p class="short-description">{{ page.header.description }}</p>
-        <p class="category">{{ page.header.category }}</p>
+        <a href="{{ page.parent.url }}" class="category"> <span class="badge">{{ page.parent.title }}</span></a>
       </div>
     </div>
   </div>
@@ -27,17 +27,17 @@
   <div class="row">
     <div class="col-sm-8">
       <img src="http://placehold.it/800x300" class="img-responsive"/>
-      <h4>About {{ page.title }}</h4>
+      <h4>About {{ page.parent.title }}</h4>
       <p class="long-description">{{ page.header.description_long }}</p>
     </div>
     <div class="col-sm-4">
       <div class="panel panel-default">
           <div class="panel-heading">Social networks</div>
           <div class="panel-body">
-            <a href="#" target="_blank"><i class="fa fa-facebook-square"></i></a>
-            <a href="#" target="_blank"><i class="fa fa-twitter-square"></i></a>
-            <a href="#" target="_blank"><i class="fa fa-google-plus-square"></i></a>
-            <a href="#" target="_blank"><i class="fa fa-instagram-square"></i></a>
+            <a href="{{ page.facebook }}" target="_blank"><i class="fa fa-3x fa-facebook-square"></i></a>
+            <a href="{{ page.twitter }}" target="_blank"><i class="fa fa-3x fa-twitter-square"></i></a>
+            <a href="{{ page.google }}" target="_blank"><i class="fa fa-3x fa-google-plus-square"></i></a>
+            <a href="{{ page.instagram }}" target="_blank"><i class="fa fa-3x fa-instagram"></i></a>
           </div>
       </div>
       <a href="{{ page.header.site_url }}" class="btn btn-default btn-large btn-block" target="_blank">{{ page.title }}</a>
