--- a/user/themes/stack/css/style.css
+++ b/user/themes/stack/css/style.css
@@ -73,7 +73,6 @@ section.home{
   padding: 10px 0;
 }
 
-<<<<<<< HEAD
 a {
   color: #8BC34A;
   -webkit-transition: color 100ms linear;
@@ -85,8 +84,8 @@ a {
 
 a:hover, a:active {
   color: #333;
-=======
+}
+
 .footer .copyright .green{
   color: #8BC34A;
->>>>>>> c81545fb30a8315fb5496a5fadfeba067c88c4ac
 }
