--- a/user/themes/stack/css/style.css
+++ b/user/themes/stack/css/style.css
@@ -1,7 +1,14 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,900,400);
+
 @media (min-width: 1200px) {
     .container{
         max-width: 970px;
     }
+}
+
+
+h1, h2, h3 {
+  font-family: 'Roboto', sans-serif;
 }
 
 header {
@@ -10,10 +17,28 @@ header {
 
 header h1 {
   margin-top: 15px;
+  font-weight: 100;
+  text-transform: uppercase;
+}
+
+.title {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+}
+
+.category {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+  font-size: 2rem;
+}
+
+.font-bold {
+  font-weight: 900;
 }
 
 header h2 {
   margin-top: 5px;
+  font-weight: 100;
 }
 
 h1 {
@@ -84,6 +109,7 @@ a {
 
 a:hover, a:active {
   color: #333;
+  text-decoration: none;
 }
 
 .footer .copyright .green{
