--- a/user/themes/stack/templates/partials/base.html.twig
+++ b/user/themes/stack/templates/partials/base.html.twig
@@ -27,7 +27,7 @@
         <div class="row">
           <div class="col-xs-12">
             <a href="{{ base_url_absolute }}"><img src="http://placehold.it/100x100" href="#" alt="logo" class="logo"></a>
-            <h1><a href="{{ base_url_absolute }}">Sharing-eco</a></h1>
+            <h1><a href="{{ base_url_absolute }}">Sharing<span class="font-bold">eco</span></a></h1>
             <h2>A curated directory of resource to share your skills and make money</h2>
           </div>
         </div>
