templates updated, fonts and style are done

--- a/user/themes/stack/templates/category.html.twig
+++ b/user/themes/stack/templates/category.html.twig
@@ -6,8 +6,14 @@
 {% endblock %}
 
 {% block body %}
+
+<div class="block-title">
+  <div class="container">
+    <h2 class="main-title">{{ page.title }}</h2>
+  </div>
+</div>
+
 <div class="container">
-  <h2 class="main-title">{{ page.title }}</h2>
   <div class="row item">
     <div class="col-md-8">
       {% for post in collection %}
@@ -21,12 +27,16 @@
               <div class="content">
                 <h3 class="title"><a href="{{ post.header.site_url }}" target="_blank">{{ post.title }}</a></h3>
                 <div class="description">{{ post.header.description | truncate(200) }}</div>
-                <div>
-                  {% for post_taxonomy in post.taxonomy.region %}
-                    {{ post_taxonomy }}{% if not loop.last %}, {% endif %}
-                  {% endfor %}
+                <div class="row">
+                  <div class="col-xs-8">
+                    {% for post_taxonomy in post.taxonomy.region %}
+                      <span class="label label-info">{{ post_taxonomy }}</span>{% if not loop.last %} {% endif %}
+                    {% endfor %}
+                  </div>
+                  <div class="col-xs-4">
+                    <a href="{{post.url}}" class="more">Read more <i class="glyphicon glyphicon-chevron-right"></i></a>
+                  </div>
                 </div>
-                <a href="{{post.url}}" class="more">Read more <i class="glyphicon glyphicon-chevron-right"></i></a>
               </div>
             </div>
           </div>
