--- a/user/themes/stack/css/category.css
+++ b/user/themes/stack/css/category.css
@@ -6,6 +6,22 @@
   margin-bottom: 15px;
 }
 
+.block-title {
+  background-color: #f5f5f5;
+  margin-top: -20px;
+  margin-bottom: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #eee;
+}
+
+.block-title h2 {
+  margin: 0;
+  font-size: 2.4rem;
+  color: #333;
+  font-weight: 300;
+}
+
 .item .content .title{
   margin: 0px;
   margin-bottom: 5px;
@@ -29,6 +45,9 @@
   text-decoration: none;
   font-size: 13px;
 }
+
+
+
 
 @media (max-width: 768px){
   .main-title{
