--- a/user/themes/stack/css/site.css
+++ b/user/themes/stack/css/site.css
@@ -11,11 +11,12 @@ hr {
 
 h3 {
   margin-top: 0;
-  font-size: 28px;
+  font-size: 2.8rem;
+  font-weight: 100;
 }
 
 h4 {
-  margin-top: 20px;
+  margin-top: 2rem;
 }
 
 .short-description {
@@ -33,4 +34,17 @@ h4 {
 
 .panel-body a {
   margin-right: 5px;
+}
+
+.label-default {
+  background-color: #fff;
+  color: #8BC34A;
+  font-family: 'Roboto', sans-serif;
+}
+
+.badge-category {
+  background-color: #8BC34A;
+  color: #fff;
+  font-family: 'Roboto', sans-serif;
+  border: 1px solid #fff;
 }
