--- a/user/themes/stack/templates/partials/footer.html.twig
+++ b/user/themes/stack/templates/partials/footer.html.twig
@@ -30,7 +30,7 @@
             <div class="col-xs-12 col-sm-3">
                 <div class="title">Tips</div>
                 <ul>
-                    <li><a href="#">Submit a new resource</a></li>
+                    <li><a href="{{ base_url_absolute }}/form_resource">Submit a new resource</a></li>
                     <li><a href="#">Report a dead link</a></li>
                 </ul>
             </div>
