--- a/user/themes/stack/templates/partials/footer.html.twig
+++ b/user/themes/stack/templates/partials/footer.html.twig
@@ -3,7 +3,7 @@
         <div class="row upper-section">
             <div class="col-xs-12 col-sm-3">
               <div class="title">About</div>
-              <div class="description">Sharing Eco is zeoif ezoifjezioj ezifjez foizjef izejfoezi jfiezf </div>
+              <div class="description">CaptainShare is a curated directory of sharing economy resources to make & save money</div>
             </div>
             <div class="col-xs-12 col-sm-3">
                 <div class="title">Navigate</div>
