added form dead link

--- a/user/themes/stack/templates/partials/footer.html.twig
+++ b/user/themes/stack/templates/partials/footer.html.twig
@@ -31,7 +31,7 @@
                 <div class="title">Tips</div>
                 <ul>
                     <li><a href="{{ base_url_absolute }}/form_resource">Submit a new resource</a></li>
-                    <li><a href="#">Report a dead link</a></li>
+                    <li><a href="{{ base_url_absolute }}/form_dead_link">Report a dead link</a></li>
                 </ul>
             </div>
         </div>
