--- a/user/themes/stack/css/style.css
+++ b/user/themes/stack/css/style.css
@@ -60,7 +60,7 @@ section.home{
 
 .footer{
   background-color: #333;
-  color: white;
+  color: #fff;
 }
 
 .footer .upper-section{
@@ -84,7 +84,7 @@ section.home{
 }
 
 .footer a{
-  color: white;
+  color: #ddd;
   text-decoration: none;
 }
 
