--- a/user/themes/stack/templates/partials/footer.html.twig
+++ b/user/themes/stack/templates/partials/footer.html.twig
@@ -38,8 +38,12 @@
     </div>
     <div class="copyright">
       <div class="container">
-         <section>All content copyright <a href="http://appyfriends.io">Appyfriends</a> &copy; All rights reserved.</section>
-         <section class="footer-text">Made with <i class="fa fa-heart green"></i> from <strong>all around the world</strong></section>
+        <div class="row">
+            <div class="col-xs-12">
+                <section>All content copyright <a href="http://appyfriends.io">Appyfriends</a> &copy; All rights reserved.</section>
+                <section class="footer-text">Made with <i class="fa fa-heart green"></i> from <strong>all around the world</strong></section>
+            </div>
+          </div>
        </div>
     </div>
 </footer>
