update css title

--- a/user/themes/stack/css/index.css
+++ b/user/themes/stack/css/index.css
@@ -26,7 +26,12 @@
   text-decoration: none;
 }
 
-h1 a, h1 a:hover, h1 a:active, h1 a:focus {
+h1 a {
+  color: #8BC34A;
+  text-decoration: none;
+}
+
+h1 a:hover, h1 a:active, h1 a:focus {
   color: #333;
   text-decoration: none;
 }
