report link and submit pages routes updated

--- a/user/themes/stack/templates/partials/footer.html.twig
+++ b/user/themes/stack/templates/partials/footer.html.twig
@@ -30,8 +30,8 @@
             <div class="col-xs-12 col-sm-3">
                 <div class="title">Tips</div>
                 <ul>
-                    <li><a href="{{ base_url_absolute }}/form_resource">Submit a new resource</a></li>
-                    <li><a href="{{ base_url_absolute }}/form_dead_link">Report a dead link</a></li>
+                    <li><a href="{{ base_url_absolute }}/submit">Submit a new resource</a></li>
+                    <li><a href="{{ base_url_absolute }}/report">Report a dead link</a></li>
                 </ul>
             </div>
         </div>
