--- a/user/themes/stack/css/style.css
+++ b/user/themes/stack/css/style.css
@@ -150,3 +150,13 @@ a:hover, a:active {
 }
 
 
+
+h1 a {
+  color: #8BC34A;
+  text-decoration: none;
+}
+
+h1 a:hover, h1 a:active, h1 a:focus {
+  color: #333;
+  text-decoration: none;
+}
