--- a/user/themes/stack/css/style.css
+++ b/user/themes/stack/css/style.css
@@ -160,3 +160,19 @@ h1 a:hover, h1 a:active, h1 a:focus {
   color: #333;
   text-decoration: none;
 }
+
+.block-title {
+  background-color: #f5f5f5;
+  margin-top: -20px;
+  margin-bottom: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #eee;
+}
+
+.block-title h2 {
+  margin: 0;
+  font-size: 2.4rem;
+  color: #333;
+  font-weight: 300;
+}
