newsletter widget updated

--- a/user/themes/stack/templates/partials/base.html.twig
+++ b/user/themes/stack/templates/partials/base.html.twig
@@ -56,6 +56,8 @@
         {% include 'partials/footer.html.twig' %}
     {% endblock %}
 
+        {% include 'partials/modal.html.twig' %}
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     {% do assets.addJs('theme://js/stack.min.js') %}
 
