--- a/user/themes/stack/templates/partials/footer.html.twig
+++ b/user/themes/stack/templates/partials/footer.html.twig
@@ -15,7 +15,7 @@
             <div class="col-xs-12 col-sm-3">
                 <div class="title">Updates</div>
                 <ul>
-                    <li><a href="#">Get the newsletter</a></li>
+                    <li><a href="#" data-toggle="modal" data-target="#myModal">Get the newsletter</a></li>
                     {% if site.owner.twitter %}
                       <li><a href="http://twitter.com/{{ site.owner.twitter }}">Twitter</a></li>
                     {% endif %}
