added social sharing widget

--- a/user/themes/stack/templates/partials/base.html.twig
+++ b/user/themes/stack/templates/partials/base.html.twig
@@ -66,5 +66,8 @@
     {% endblock %}
 
     {{ assets.js() }}
+
+    <script src="//load.sumome.com/" data-sumo-site-id="38121637f65347c0aa163a48c245100146982563197abaf1bac751f0009960ca" async="async"></script>
+
   </body>
 </html>
