social networks added

--- a/user/themes/stack/templates/partials/footer.html.twig
+++ b/user/themes/stack/templates/partials/footer.html.twig
@@ -17,13 +17,13 @@
                 <ul>
                     <li><a href="#" data-toggle="modal" data-target="#myModal">Get the newsletter</a></li>
                     {% if site.owner.twitter %}
-                      <li><a href="http://twitter.com/{{ site.owner.twitter }}">Twitter</a></li>
+                      <li><a href="http://twitter.com/{{ site.owner.twitter }}" target="_blank">Twitter</a></li>
                     {% endif %}
                     {% if site.owner.facebook %}
-                      <li><a href="http://facebook.com/{{ site.owner.facebook }}">Facebook</a></li>
+                      <li><a href="http://facebook.com/{{ site.owner.facebook }}" target="_blank">Facebook</a></li>
                     {% endif %}
                     {% if site.owner.google_plus %}
-                      <li><a href="{{ site.owner.google_plus }}">Google+</a></li>
+                      <li><a href="{{ site.owner.google_plus }}" target="_blank">Google+</a></li>
                     {% endif %}
                 </ul>
             </div>
