footer updated for about page

--- a/user/themes/stack/templates/about.html.twig
+++ b/user/themes/stack/templates/about.html.twig
@@ -6,6 +6,12 @@
 
 {% block body %}
 
+<div class="block-title">
+  <div class="container">
+    <h2 class="main-title">{{ header.title }}</h2>
+  </div>
+</div>
+
 <div class="container">
 	<div class="row">
 		<div class="col-xs-12">
