--- a/user/themes/stack/templates/partials/footer.html.twig
+++ b/user/themes/stack/templates/partials/footer.html.twig
@@ -8,7 +8,7 @@
             <div class="col-xs-12 col-sm-3">
                 <div class="title">Navigate</div>
                 <ul>
-                    <li><a href="#">About</a></li>
+                    <li><a href="{{ base_url_absolute }}/about">About</a></li>
                     <li><a href="http://appyfriends.io/team" target="_blank">Team</a></li>
                 </ul>
             </div>
