adsense added to homepage

--- a/user/themes/stack/templates/index.html.twig
+++ b/user/themes/stack/templates/index.html.twig
@@ -19,4 +19,23 @@
     {% endfor %}
   </div>
 </section>
+
+<section class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- CaptainShare -->
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-7670795591258645"
+           data-ad-slot="5801582417"
+           data-ad-format="auto"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+      <br>
+    </div>
+  </div>
+</section>
+
 {% endblock %}
