doorbell widget added

--- a/user/themes/stack/templates/partials/base.html.twig
+++ b/user/themes/stack/templates/partials/base.html.twig
@@ -70,5 +70,14 @@
 
     <script src="//load.sumome.com/" data-sumo-site-id="38121637f65347c0aa163a48c245100146982563197abaf1bac751f0009960ca" async="async"></script>
 
+    <script type="text/javascript">
+        window.doorbellOptions = {
+            appKey: 'd3ixY9YwIfcMpgQ5SMMEYLoYDyxda3opdlO5n4CkVpkBitEef32GkYFQN11M8XRr'
+        };
+        (function(d, t) {
+            var g = d.createElement(t);g.id = 'doorbellScript';g.type = 'text/javascript';g.async = true;g.src = 'https://embed.doorbell.io/button/3495?t='+(new Date().getTime());(d.getElementsByTagName('head')[0]||d.getElementsByTagName('body')[0]).appendChild(g);
+        }(document, 'script'));
+    </script>
+
   </body>
 </html>
