--- a/user/themes/stack/templates/error.html.twig
+++ b/user/themes/stack/templates/error.html.twig
@@ -11,7 +11,7 @@
 		<div class="col-xs-12">
 			<div id="error">
 				<div>
-					<h1>Error {{ page.header.http_response_code }}</h1>
+					<h1>{{ page.header.http_response_code }}</h1>
 					<p>
 						{{ page.content }}
 					</p>
