--- a/user/themes/stack/css/style.css
+++ b/user/themes/stack/css/style.css
@@ -20,6 +20,7 @@ body {
 @media only screen and (max-width : 768px) {
       footer {
     height: auto !important;
+    position: initial !important;
     }
 }
 
