--- a/user/themes/stack/templates/category.html.twig
+++ b/user/themes/stack/templates/category.html.twig
@@ -20,7 +20,7 @@
           <div class="row item">
             <div class="col-sm-3 col-xs-12">
               <a href="{{ post.header.site_url }}" target="_blank">
-                <img src="http://placehold.it/125x125"/>
+                <img src="{{ post.media[post.header.logo].url }}" class="img-responsive"/>
               </a>
             </div>
             <div class="col-sm-9 col-xs-12">
