--- a/user/themes/stack/templates/partials/base.html.twig
+++ b/user/themes/stack/templates/partials/base.html.twig
@@ -34,6 +34,11 @@
 
     </script>
 
+    <!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.9/cookieconsent.min.js"></script>
+    <script type="text/javascript">
+        window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience on our website","dismiss":"Got it!","learnMore":"More info","link":null,"theme":"light-floating"};
+    </script>
   </head>
   <body>
 
