removed last hr and added br after homepage picture

--- a/user/themes/stack/templates/category.html.twig
+++ b/user/themes/stack/templates/category.html.twig
@@ -40,7 +40,7 @@
               </div>
             </div>
           </div>
-          <hr/>
+          {% if not loop.last %}<hr/>{% endif %}
       {% endfor %}
     </div>
   </div>
