--- a/user/themes/stack/templates/site.html.twig
+++ b/user/themes/stack/templates/site.html.twig
@@ -32,7 +32,7 @@
 <section class="container info">
   <div class="row">
     <div class="col-sm-8">
-      <img src="{{ page.media[page.header.homepage].url }}" class="img-responsive"/>
+      <img src="{{ page.media[page.header.homepage].url }}" class="img-responsive"/><br/>
     </div>
     <div class="col-sm-4">
     {% if page.header.facebook or page.header.twitter or page.header.google or page.header.instagram %}
