--- a/user/themes/stack/templates/category.html.twig
+++ b/user/themes/stack/templates/category.html.twig
@@ -9,7 +9,7 @@
 
 <div class="block-title">
   <div class="container">
-    <h2 class="main-title">{{ page.title }}</h2>
+    <h2 class="main-title"><a href="{{ base_url_absolute }}"><i class="fa fa-angle-left"></i></a> {{ page.title }}</h2>
   </div>
 </div>
 
