fixed site logo responsive

--- a/user/themes/stack/css/category.css
+++ b/user/themes/stack/css/category.css
@@ -42,4 +42,10 @@
   .item .col-xs-12{
     text-align: center;
   }
+
+  .logo-site{
+      width: 160px;
+      display: inline-block;
+      margin-bottom: 5px;
+  }
 }
