--- a/user/themes/stack/templates/site.html.twig
+++ b/user/themes/stack/templates/site.html.twig
@@ -11,7 +11,7 @@
     <div class="row">
       <div class="col-sm-2">
         <a href="{{ page.header.site_url }}" target="_blank">
-          <img src="{{ page.media[page.header.logoW].url }}" class="img-responsive"/>
+          <img src="{{ page.media[page.header.logoW].url }}" class="img-responsive logo-site"/>
         </a>
       </div>
       <div class="col-sm-6">
