--- a/user/themes/stack/css/style.css
+++ b/user/themes/stack/css/style.css
@@ -22,6 +22,10 @@ body {
     height: auto !important;
     position: initial !important;
     }
+
+    body {
+      margin-bottom: 0 !important;
+  }
 }
 
 
