--- a/user/themes/stack/templates/partials/base.html.twig
+++ b/user/themes/stack/templates/partials/base.html.twig
@@ -45,7 +45,7 @@
     <header>
       <div class="container">
         <div class="row">
-          <div class="col-xs-12">
+          <div class="col-xs-12 special-col">
             <a href="{{ base_url_absolute }}"><img src="{{ url('theme://images/logo512.png', true) }}" alt="logo" class="logo"></a>
             <h1><a href="{{ base_url_absolute }}">Captain<span class="font-bold">Share</span></a></h1>
             <h2>A curated directory of sharing economy resources to make & save money</h2>
