--- a/user/themes/stack/templates/partials/footer.html.twig
+++ b/user/themes/stack/templates/partials/footer.html.twig
@@ -1,19 +1,18 @@
 <footer class="footer">
     <div class="container">
         <div class="row upper-section">
-            <div class="col-xs-12 col-sm-3">
+            <div class="col-xs-12 col-sm-4">
               <div class="title">About</div>
               <div class="description">CaptainShare is a curated directory of sharing economy resources to make & save money</div>
             </div>
-            <div class="col-xs-12 col-sm-3">
+            <div class="col-xs-12 col-sm-4">
                 <div class="title">Navigate</div>
                 <ul>
                     <li><a href="{{ base_url_absolute }}/">Home</a></li>
                     <li><a href="{{ base_url_absolute }}/about">About</a></li>
-                    <li><a href="http://appyfriends.io/team" target="_blank">Team</a></li>
                 </ul>
             </div>
-            <div class="col-xs-12 col-sm-3">
+            <div class="col-xs-12 col-sm-4">
                 <div class="title">Updates</div>
                 <ul>
                     <li><a href="#" data-toggle="modal" data-target="#myModal">Get the newsletter</a></li>
@@ -28,20 +27,13 @@
                     {% endif %}
                 </ul>
             </div>
-            <div class="col-xs-12 col-sm-3">
-                <div class="title">Tips</div>
-                <ul>
-                    <li><a href="{{ base_url_absolute }}/submit">Submit a new resource</a></li>
-                    <li><a href="{{ base_url_absolute }}/report">Report a dead link</a></li>
-                </ul>
-            </div>
         </div>
     </div>
     <div class="copyright">
       <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <section>All content copyright <a href="http://appyfriends.io">Appyfriends</a> &copy; All rights reserved.</section>
+                <section>All content copyright CaptainShare &copy; All rights reserved.</section>
                 <section class="footer-text">Made with <i class="fa fa-heart green"></i> from <strong>all around the world</strong></section>
             </div>
           </div>
